--- a/Pagina/Pantallas/inicio.html
+++ b/Pagina/Pantallas/inicio.html
@@ -30,7 +30,7 @@
             <p class="parrafo">La Asociación Corredores de Turismo Carretera (ACTC) organiza y fiscaliza el Turismo Carretera y sus divisionales en los principales autódromos del país.</p>
             <p class="parrafo">Con un calendario federal, transmisión en vivo y programas de formación, la ACTC promueve competitividad, seguridad y el desarrollo de nuevos talentos.</p>    
             <div class="redes">
-                <h2 class="sub">Seguinos en nuestras redes</h2>
+                <h2 class="sub">SEGUINOS EN NUESTRAS REDES</h2>
                 <div class="iconos">
                     <a class="boton-icono" href="https://www.instagram.com/actcargentina/">
                     <img src="../Pantallas/Recursos/insta.svg">
