--- a/Pagina/Pantallas/inicio.html
+++ b/Pagina/Pantallas/inicio.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Inicio ACTC</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css"/>
 </head>
 <body>
 
@@ -23,22 +23,17 @@
 <main class="fondo">
     <section class="caja-superior">
         <div class="recuadro">
-            <img src="Recursos/INICIO.jpg" alt="Imagen ACTC">
-        </div>    
+            <img src="Recursos/INICIO.jpg" alt="ACTC">
+        </div>
         <div class="texto">
-            <h1 class="titulo">ACTC Inicio</h1>
+            <h1 class="titulo">ACTC</h1>
             <p class="parrafo">La Asociación Corredores de Turismo Carretera (ACTC) organiza y fiscaliza el Turismo Carretera y sus divisionales en los principales autódromos del país.</p>
-            <p class="parrafo">Con un calendario federal, transmisión en vivo y programas de formación, la ACTC promueve competitividad, seguridad y el desarrollo de nuevos talentos.</p>    
-            <div class="redes">
-                <h2 class="sub">SEGUINOS EN NUESTRAS REDES</h2>
-                <div class="iconos">
-                    <a class="boton-icono" href="https://www.instagram.com/actcargentina/">
-                    <img src="../Pantallas/Recursos/insta.svg">
-                    <a class="boton-icono" href="https://www.youtube.com/user/actcargentina">
-                    <img src="../Pantallas/Recursos/youtube.svg">
-                    <a class="boton-icono" href="https://actc.org.ar/">
-                    <img src="../Pantallas/Recursos/web.svg">
-                </div>
+            <p class="parrafo">Con un calendario federal, transmisión en vivo y programas de formación, la ACTC promueve competitividad, seguridad y el desarrollo de nuevos talentos.</p>
+            <h2 class="sub">Seguinos</h2>
+            <div class="iconos">
+                <a class="boton-icono" href="https://www.instagram.com/actcargentina/" target="_blank" rel="noopener">Instagram</a>
+                <a class="boton-icono" href="https://www.youtube.com/user/actcargentina" target="_blank" rel="noopener">YouTube</a>
+                <a class="boton-icono" href="https://actc.org.ar/" target="_blank" rel="noopener">Web</a>
             </div>
         </div>
     </section>
