--- a/Pagina/Pantallas/registro.html
+++ b/Pagina/Pantallas/registro.html
@@ -29,8 +29,8 @@
             <p class="parrafo">Con un calendario federal, combina tradición y modernidad, promoviendo el crecimiento de nuevos talentos.</p>
             <h2 class="sub">¿Qué desea registrar?</h2>
             <div class="acciones">
-                <a class="boton boton-primario" href="registropiloto.html">Registrar piloto</a>
-                <a class="boton boton-borde" href="registrocampeonato.html">Actualizar campeonato</a>
+                <a class="boton" href="registropiloto.html">Registrar piloto</a>
+                <a class="boton" href="registrocampeonato.html">Actualizar campeonato</a>
             </div>
         </div>
     </div>
