--- a/Pagina/Pantallas/calendario.html
+++ b/Pagina/Pantallas/calendario.html
@@ -92,7 +92,7 @@
                 <h2>RÍO GRANDE</h2>
                 <p class="sub">Autódromo Ciudad de Río Grande</p>
             </header>
-            <div class="pista"><img src="Recursos/riogrande.png" alt="Circuito de Río Grande"></div>
+            <div class="pista"><img src="../Pantallas/Recursos/riogrnade.png" alt="Circuito de Río Grande"></div>
             <button class="mas">Ver más</button>
         </article>    
         <article class="tarjeta">
