agregando pagina de login

--- a/Pagina/Pantallas/campeonato.html
+++ b/Pagina/Pantallas/campeonato.html
@@ -10,12 +10,13 @@
 
 <nav class="navbar">
   <div class="logo"><img src="Recursos/LOGO.png" alt="Logo ACTC"></div>
-  <ul class="enlaces">
-    <li><a href="inicio.html">INICIO</a></li>
-    <li><a href="campeonato.html" class="activo">CAMPEONATO</a></li>
-    <li><a href="calendario.html">CALENDARIO</a></li>
-    <li><a href="registro.html">REGISTRO</a></li>
-  </ul>
+      <ul class="enlaces">
+        <li><a href="inicio.html">INICIO</a></li>
+        <li><a href="campeonato.html">CAMPEONATO</a></li>
+        <li><a href="calendario.html">CALENDARIO</a></li>
+        <li><a href="login.html" class="activo">LOGIN</a></li>
+        <li><a href="registro.html" class="activo">REGISTRO</a></li>
+    </ul>
 </nav>
 
 <main class="tabla">
