--- a/Pagina/Pantallas/inicio.html
+++ b/Pagina/Pantallas/inicio.html
@@ -16,6 +16,7 @@
         <li><a href="inicio.html" class="activo">INICIO</a></li>
         <li><a href="campeonato.html">CAMPEONATO</a></li>
         <li><a href="calendario.html">CALENDARIO</a></li>
+        <li><a href="login.html">LOGIN</a></li>
         <li><a href="registro.html">REGISTRO</a></li>
     </ul>
 </nav>
