--- a/Pagina/Pantallas/calendario.html
+++ b/Pagina/Pantallas/calendario.html
@@ -12,11 +12,12 @@
     <div class="logo">
         <img src="./Recursos/LOGO.png" alt="LOGO ACTC">
     </div>
-    <ul class="enlaces">
+        <ul class="enlaces">
         <li><a href="inicio.html">INICIO</a></li>
         <li><a href="campeonato.html">CAMPEONATO</a></li>
-        <li><a href="calendario.html" class="activo">CALENDARIO</a></li>
-        <li><a href="registro.html">REGISTRO</a></li>
+        <li><a href="calendario.html">CALENDARIO</a></li>
+        <li><a href="login.html" class="activo">LOGIN</a></li>
+        <li><a href="registro.html" class="activo">REGISTRO</a></li>
     </ul>
 </nav>
 
