Logos del footer

--- a/Pagina/Pantallas/registrocampeonato.html
+++ b/Pagina/Pantallas/registrocampeonato.html
@@ -74,9 +74,9 @@
     <div class="pie-redes">
       <h3>Seguinos</h3>
       <div class="redes-iconos">
-        <a href="https://www.instagram.com/actcargentina"><img src="ruta/a/instagram.png" alt="Instagram"></a>
-        <a href="https://www.youtube.com/@actcargentina"><img src="ruta/a/youtube.png" alt="YouTube"></a>
-        <a href="https://actc.org.ar/tc/index.html"><img src="ruta/a/web.png" alt="Web"></a>
+                <a href="https://www.instagram.com/actcargentina"><img src="./Recursos/instagram-svgrepo-com (1).svg" alt="Instagram"></a>
+                <a href="https://www.youtube.com/@actcargentina"><img src="./Recursos/youtube-svgrepo-com.svg" alt="YouTube"></a>
+                <a href="https://actc.org.ar/tc/index.html"><img src="./Recursos/global-svgrepo-com.svg" alt="Web"></a>
       </div>
     </div>
   </div>
